@@ -157,6 +157,9 @@ public slots:
     //Called if this category itself is re-clicked in the breadcrumb
     virtual void reActivate() {}
 
+private slots:
+    void slotSettingsChanged();
+
 private:
     QString m_name;
     QString m_prettyName;
